# Job-Application-Agent

./: .gitignore  pyproject.toml
backend/agents/: jd_parser_agent.py
backend/agents/discovery/: ashby.py  greenhouse.py  internshala.py  lever.py  linkedin.py  naukri.py  runner.py  storage.py  verify_companies.py
backend/config/: companies.py
backend/data/tailored_resumes/: master_resume.json
backend/schemas/: models.py
tests/unit/: test_jd_parser.py  test_schemas.py
