[project]
name = "job-agent"
version = "0.1.0"
description = "Multi-agent job application pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=2.11.0",
    "langgraph>=1.2.9",
    "playwright>=1.61.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "streamlit>=1.59.2",
    "structlog>=26.1.0",
    "tenacity>=9.1.4",
    "weasyprint>=69.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]
